test/symtabTest/pass/test7.ic
class Parent {
	int x;
}

class Child extends Parent {
	void testChild () {
		x = 1;
	}
}

class Grandchild extends Child {
	void testGrandchild () {
		x = 2;
	}
}