test/symtabTest/fail/test7.ic
class MultParameters {
	void badParams (int x, string x) {
	
	}
}